# cava

./: Makefile.am  config.c  configure.ac
.github/workflows/: win_build.yml
input/: common.h  winscap.c
output/: sdl_cava.c  sdl_glsl.c
